--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <h1 class="heading">Guess The Word</h1>
+    <button class="btns exit-btn">Exit Program</button>
     <button class="btns restart-btn">Restart</button>
     <div class="play-area">
       <p class="word"></p>
