Updated code changes

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,17 +11,17 @@
 
 <body>
 	<h1 class="heading">Word</h1>
-	<button class="exit-btn">Exit Program</button>
-	<button class="restart-btn">Restart</button>
+	<button id="exit-btn">Exit Program</button>
+	<button id="restart-btn">Restart</button>
 	<div class="play-area">
 		<p class="word"></p>
 		<div class="player-area">
 			<input type="text" class="entered-guess" />
 			<button class="answer-btn">Final Answer</button>
-			<button class="point-btn">See Points</button>
+			<button id="point-btn">See Points</button>
 		</div>
 	</div>
 </body>
-<script src="./script.js"></script>
+<script src="../backend/script.js"></script>
 
 </html>
