--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="stylesheet" href="./style.css" />
+	<link rel="stylesheet" href="./frontend/style.css" />
 	<title>WordToGuess</title>
 </head>
 
@@ -22,6 +22,6 @@
 		</div>
 	</div>
 </body>
-<script src="../backend/script.js"></script>
+<script src="./backend/script.js"></script>
 
 </html>
