--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="stylesheet" href="./frontend/style.css" />
+	<link rel="shortcut icon" href="./frontend/images/background.jpg" type="image/x-icon">
 	<title>WordToGuess</title>
 </head>
 
